5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1646_2450.log
== TEST (2019-04-11 17:03:42) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
-- ERROR:
File "XXXX", line 8
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:04:17) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom> nom1):
	print(nom.upper)
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:04:28) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom> nom1):
	print(nom.upper)
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.146291
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
<built-in method upper of str object at 0x7f51cec0fca8>
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:04:41) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom> nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.220964
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:05:17) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:05:28) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.204112
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:05:42) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nom.upper > nom1):
TypeError: '>' not supported between instances of 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:06:47) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:07:00) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.165961
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:07:12) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:07:22) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- EXECUTION TIME:
0.152652
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:56:38) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:57:02) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:57:02) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 10:57:43) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.159454
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:58:18) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 10:58:21) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- EXECUTION TIME:
0.143059
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:58:38) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 10:58:53) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1.upper())
else:	
	print(nom1.upper())
	print(nom.upper())
-- EXECUTION TIME:
0.180643
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 10:59:22) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 10:59:43) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.142157
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:32) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:32) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:32) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:33) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:33) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 11:00:34) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
File "XXXX", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 11:00:34) 
-- CODE:
nom.upper() = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.116732
-- ERROR:
  File "/home/codebench/codes/1646/2450/main.py", line 1
    nom.upper() = input()
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:22:14) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1.upper()):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:22:33) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1.upper()):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.179561
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:22:53) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom > nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:23:23) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:23:46) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:24:06) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:24:14) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.219371
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:24:33) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:24:40) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:24:45) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.21082
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:24:49) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:25:01) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:25:07) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:25:14) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:26:04) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:26:24) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1.upper):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(nom < nom1.upper):
TypeError: '<' not supported between instances of 'str' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:26:42) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1.upper()):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:26:50) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1.upper()):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:27:31) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:27:40) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:28:01) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:02) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.184844
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:03) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.145377
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
ADA
Leon
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:03) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.120585
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
ADA
Leon
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:03) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.130119
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:28:04) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom < nom1):
	print(nom.upper())
	print(nom1)
else:	
	print(nom1)
	print(nom.upper())
-- EXECUTION TIME:
0.108876
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:34:32) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() < nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:35:01) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:35:08) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.212099
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:35:12) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- EXECUTION TIME:
0.219581
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:35:18) 
-- CODE:
nom = input("Primeiro nome: ")
nom1 = input("Segundo nome: ")

if(nom.upper() > nom1.upper()):
	print(nom)
	print(nom1)
else:	
	print(nom1)
	print(nom)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:36:22) 
-- CODE:
nome = input("Primeiro nome: ")
nome1 = input("Segundo nome: ")

if(nome.upper() > nome1.upper()):
	print(nome)
	print(nome1)
else:	
	print(nome1)
	print(nome)
-- EXECUTION TIME:
0.200997
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:36:24) 
-- CODE:
nome = input("Primeiro nome: ")
nome1 = input("Segundo nome: ")

if(nome.upper() > nome1.upper()):
	print(nome)
	print(nome1)
else:	
	print(nome1)
	print(nome)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:36:53) 
-- CODE:
nome = input("Primeiro nome: ")
nome1 = input("Segundo nome: ")

if(nome.upper() > nome1.upper()):
	print(nome)
	print(nome1)
if(nome.upper() < nome1.upper())	
	print(nome1)
	print(nome)
-- ERROR:
File "XXXX", line 7
    if(nome.upper() < nome1.upper())	
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:36:57) 
-- CODE:
nome = input("Primeiro nome: ")
nome1 = input("Segundo nome: ")

if(nome.upper() > nome1.upper()):
	print(nome)
	print(nome1)
if(nome.upper() < nome1.upper()):	
	print(nome1)
	print(nome)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:39:52) 
-- CODE:
nome = input("Digite o primeiro nome: ")
nome2 = input("Digite o segundo nome: ")

if(nome.upper() > nome2.upper()):
	print(nome)
	print(nome2)
else:
	print(nome2)
	print(nome
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:39:57) 
-- CODE:
nome = input("Digite o primeiro nome: ")
nome2 = input("Digite o segundo nome: ")

if(nome.upper() > nome2.upper()):
	print(nome)
	print(nome2)
else:
	print(nome2)
	print(nome)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:40:32) 
-- CODE:
nome = input("Digite o primeiro nome: ")
nome2 = input("Digite o segundo nome: ")

if(nome.upper() < nome2.upper()):
	print(nome)
	print(nome2)
else:
	print(nome2)
	print(nome)
	
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:40:43) 
-- CODE:
nome = input("Digite o primeiro nome: ")
nome2 = input("Digite o segundo nome: ")

if(nome.upper() < nome2.upper()):
	print(nome)
	print(nome2)
else:
	print(nome2)
	print(nome)
	
-- EXECUTION TIME:
0.17223
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
